# test_gazprombank

./: README!!!.md  README.md  pyproject.toml
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 123b370caf8b_.py  448f716ad346_.py  e97c27c2ede2_.py
src/api/: get_log.py  home.py
src/api/templates/: index.html  result.html
src/app/: app.py
src/connections/: postgres.py
src/core/: config.py
src/models/: base.py  log.py  message.py
src/service/: log_service.py
src/utils/: regex_sorter.py
