[project]
name = "gazprombank"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aleksandr Morozov", email = "aam0rozovv@yandex.ru"},
]
dependencies = [
    "fastapi>=0.111.1",
    "orjson>=3.10.6",
    "uvicorn>=0.30.3",
    "gunicorn>=22.0.0",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "psycopg2>=2.9.9",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
